--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/extras/extras.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/extras/extras.component.html
@@ -26,8 +26,7 @@
       <th scope="col" class="Encabezado-Tabla">id_extra</th>
       <th scope="col" class="Encabezado-Tabla">account</th>
       <th scope="col" class="Encabezado-Tabla">category</th>
-      <th scope="col" class="Encabezado-Tabla">Operación</th>
-
+      <!--th scope="col" class="Encabezado-Tabla">Operación</th-->
     </thead>
     <tbody>
     <tr *ngFor="let extra of extrasService.Extras; let i = index" >
@@ -37,13 +36,9 @@
       <td class="Celdas-Tabla">{{extra.id_extra}}</td>
       <td class="Celdas-Tabla">{{extra.account}}</td>
       <td class="Celdas-Tabla">{{extra.category}}</td>
-
-      <td class="Celdas-Tabla">
+      <!--td class="Celdas-Tabla">
         <button class="btn btn-primary">Corregir</button>
-
-        <!--button type="button" class="btn btn-primary" style="width: 100px; margin-right: 20px; font-size: 20px" >Editar</button>
-        <button type="button" class="btn btn-danger" style="width: 100px; margin-left: 20px; font-size: 20px" (click)="eliminar(i, back.id_backup)">Eliminar</button-->
-      </td>
+      </td-->
     </tr>
     <div
       infiniteScroll
