--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
@@ -17,7 +17,7 @@
   <h2 class="font-weight-lighter">La tabla Preferences no tiene inconsistencia de datos</h2>
 </div>
 <div *ngIf="preferencesService.Preferences.length > 0">
-  <table class="table table-hover">
+  <table class="table table-hover ">
     <thead class="thead-dark">
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
@@ -25,7 +25,7 @@
       <th scope="col" class="Encabezado-Tabla">Id Backup</th>
       <th scope="col" class="Encabezado-Tabla">key_name</th>
       <th scope="col" class="Encabezado-Tabla">value</th>
-      <th scope="col" class="Encabezado-Tabla">Operación</th>
+      <!--th scope="col" class="Encabezado-Tabla">Operación</th-->
     </thead>
     <tbody>
     <tr *ngFor="let preference of preferencesService.Preferences; let i = index" >
@@ -34,12 +34,9 @@
       <td class="Celdas-Tabla">{{preference.id_backup}}</td>
       <td class="Celdas-Tabla">{{preference.key_name}}</td>
       <td class="Celdas-Tabla">{{preference.value}}</td>
-
-      <td class="Celdas-Tabla">
+      <!--td class="Celdas-Tabla">
         <button class="btn btn-primary">Corregir</button>
-        <!--button type="button" class="btn btn-primary" style="width: 100px; margin-right: 20px; font-size: 20px" >Editar</button>
-        <button type="button" class="btn btn-danger" style="width: 100px; margin-left: 20px; font-size: 20px" (click)="eliminar(i, back.id_backup)">Eliminar</button-->
-      </td>
+      </td-->
     </tr>
     <div
       infiniteScroll
